--- a/web1/src/app/admin/company-setting/company-setting.component.html
+++ b/web1/src/app/admin/company-setting/company-setting.component.html
@@ -67,7 +67,7 @@
                                                             <mat-label>Company Currency</mat-label>
                                                             <mat-select name="CompanyCurrency" required
                                                                 [(ngModel)]="data.CompanyCurrency" required>
-                                                                <mat-option value=" ">No Currency </mat-option>
+                                                                <mat-option value="0">No Currency </mat-option>
                                                                 <mat-option value="INR">INR</mat-option>
                                                                 <mat-option value="USD">USD</mat-option>
                                                                 <mat-option value="CAD">CAD</mat-option>
