--- a/server/views/invoice.ejs
+++ b/server/views/invoice.ejs
@@ -507,7 +507,8 @@
 
             <!-- improtant note billtotal start -->
             <section>
-                <div class="billTotalRow">
+                <div class="billTotalRow" style="position: relative;">
+                    <img src="<%= data.Signature %>" alt="Signature" style="width: 100px;position:absolute; left: 55%;top: 30%;">
                     <div class="col1">
                         <h4 <% %> style="color: <%= data.Color %>;padding: 0; margin:0;">Important Note</h4>
 
